frontend/src/index.scss
/* ... */
#root // heavier selector
.file-show {
    &>div {
        height: 100%;
        width: 100%;
    }
    .showing-container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;}
    .showing {
        max-width: calc(100% - var(--nav-size)*2); // avoid overlapping of controls and nav buttons
        max-height: 100%;
    }
    audio.showing, // even on mobile, we need the whole thing to control it decently, and nav-s don't seem to be a problem
    img.showing { max-width: 100% } // we are ok with overlapping for simple images
    .main {
        flex: 1; position: relative; max-height: 100%;
        overflow: hidden; // without this <video> can make me go beyond the screen limit
    }
    .freeY, .fullWidth {
        .main { overflow-y: auto; }
        .showing { max-height: initial; margin: auto; }
        .showing-container { overflow: auto; align-items: flex-start;}
    }
    .fullWidth {
        .showing-container, .showing { width: 100%; }
    }
    --nav-size: min(25vh, 25vw);
    .nav {
        position: absolute;
        margin: -.4em; // closer to the edge
        font-size: var(--nav-size); // big
        cursor: pointer;
        opacity: .3;
        -webkit-text-stroke: 2px black;
        user-select: none;
        transition: opacity .3s;
        &:hover { opacity: .7; }
        &.nav-hidden { opacity: 0 }
    }
    .bar {
        padding: .5em 1em;
        background: var(--bg);
        opacity: .8;
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: flex-end;
        gap: .5em 1.5em;

        .entry-details { font-size: smaller; }
        .entry-ts { display: inherit; }
        .entry-size::after { display: none }
    }
}
.file-show-help {
    kbd { margin: .5em }
    kbd:first-of-type { margin-top: 1em; }
}

@media (min-width: 42em) {
    body {
        /* Works on Firefox */
        scrollbar-width: thin;
        scrollbar-color: var(--button-bg) var(--ghost-contrast);

        /* Works on Chrome, Edge, and Safari */
        &::-webkit-scrollbar {
            width: 12px;
        }
        &::-webkit-scrollbar-track {
            background: var(--ghost-contrast);
        }
        &::-webkit-scrollbar-thumb {
            background-color: var(--button-bg);
            border-radius: 20px;
            border: 1px solid var(--ghost-contrast)
        }
    }
    button { padding: .5em 1em; }
}
@media (max-width: 42em) {
    :root { --ghost-contrast: #8883; } /* phones have different curve */
    body, button, select { font-size: 14pt; }
    #menu-bar, #filter-bar, #clipBar {
        button label { display: none } /* icons only */
    }
    #filter-bar {
        margin-top: 0.4em;
        button { // make it same size of top bar
            width: 17.6vw;
            height: 2.3em;
        }
    }
    .breadcrumb {
        word-break: break-all; // solves with very long names without spaces. 'break-word' is nicer but doesn't handle worst cases like /gear/mininova/x/LOOPMASTERS%204Gig%20Pack/LOOPMASTERS_2015/BASS_HOUSE_AND_GARAGE_2_DEMOS/SOUNDS_AND_FX/
        .icon {
            font-size:24px;
        }
    }
    #root>.tiles-mode {
        margin: 0;
    }
}

@media (max-height: 600px) {
    .file-dialog {
        .dialog-content {
            display: flex;
            gap: 3em;
            margin: 1em;
            .file-menu { // move divisor to left
                margin-top: 0;
                padding-top: 0;
                border-top: none;
                margin-left: 2em;
                padding-left: 2em;
                border-left: 1px solid var(--faint-contrast);
            }
        }
    }
}

@media (pointer: coarse) {
    #root>.tiles-mode .file-menu-button { font-size: 1em; margin-top: 0.3em; } // easier to tap
}

